Clean up layout issues

--- a/css/custom.css
+++ b/css/custom.css
@@ -10,11 +10,11 @@ p, body {
 
 body .jumbotron {
   background-color: none;
-  background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('../images/shadow-knight-banner.jpg');
+  background-image: linear-gradient(rgba(0,0,0,0.65), rgba(0,0,0,0.65)), url('../images/shadow-knight-banner.jpg');
   background-size: cover;
   background-repeat: none;
   background-attachment: fixed;
-  background-position: 0 -50px;
+  background-position: 50% 50%;
   height: calc(100%-50px) !important;
 }
 
